# lego_esp32cam

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  idf_component.yml  sdkconfig
main/: CMakeLists.txt  app_main.c  app_shared.h  camera_task.c  camera_task.h  conn_mgr.c  conn_mgr.h  fota.c  fota.h  log_stream.c  log_stream.h  ota.c  ota.h  ping_mod.c  ping_mod.h  prov_ble.c  prov_ble.h  rc522.c  rc522.h  remote_console.c  remote_console.h  rfid_task.c  rfid_task.h  udp_tx.c  udp_tx.h  ws_client.c  ws_client.h
